--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     rootDir: .
     plan: starter
     autoDeploy: true
-    buildCommand: npm ci && npm run build:backend
+    buildCommand: npm ci --include=dev && npm run build:backend
     startCommand: npm run start:backend
     envVars:
       - key: NODE_VERSION
@@ -35,7 +35,7 @@ services:
     rootDir: .
     plan: starter
     autoDeploy: true
-    buildCommand: npm ci && npm run build:frontend
+    buildCommand: npm ci --include=dev && npm run build:frontend
     startCommand: npm --workspace @voice-assistant/frontend run start -- -p $PORT
     envVars:
       - key: NODE_VERSION
